--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.1.8",
+    "@ai-sdk/google": "^1.1.14",
     "@clerk/backend": "^1.20.1",
     "@clerk/nextjs": "^6.8.1",
     "@clerk/themes": "^2.1.53",
@@ -49,6 +51,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "ai": "^4.1.41",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -72,6 +76,7 @@
     "stripe": "^16.9.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "unstructured-client": "^0.20.0",
     "vaul": "^0.9.9",
     "zod": "^3.24.1"
   },
